--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,6 +30,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build
+    - name: Test
+      run: python -m unittest discover -s ./tests
     - name: Build package
       run: python -m build
     - name: Publish package
