--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r ./test/requirements.txt
+        pip install -r ./tests/requirements.txt
     - name: Test
       run: python -m unittest discover -s ./tests
     - name: Build package
